fix(markdown): fix vertical scroll bar appears on paragraph with math on safari

--- a/src/markdown/MarkdownContent.module.less
+++ b/src/markdown/MarkdownContent.module.less
@@ -9,6 +9,7 @@
 
   p, blockquote, mjx-container[display="true"] {
     overflow: auto;
+    overflow-y: hidden;
   }
 
   blockquote {
